@@ -6,6 +6,7 @@
 package ca.strangebrew;
 
 import java.io.File;
+import java.math.BigDecimal;
 import java.text.DateFormat;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
@@ -148,4 +149,12 @@ public class SBStringUtils {
 		String r = new String(buf);
 		return r;
 	}
+	
+	public static double round(double d, int decimalPlace){
+		// see the Javadoc about why we use a String in the constructor
+		// http://java.sun.com/j2se/1.5.0/docs/api/java/math/BigDecimal.html#BigDecimal(double)
+		BigDecimal bd = new BigDecimal(Double.toString(d));
+		bd = bd.setScale(decimalPlace,BigDecimal.ROUND_HALF_UP);
+		return bd.doubleValue();
+	}	
 }
